Got dockerfile to run

--- a/README.me
+++ b/README.me
@@ -1,3 +1,10 @@
 # Predict Health Costs With Regression
 I used my script at https://colab.research.google.com/drive/1lmV4xnToA9_rpmDHTrjD99WCdUqFrw11#scrollTo=3G91tB76GpV5 to save the model
 I made this model as part of the FreeCodeCamp challenges
+
+## Docker
+Build with:
+docker image build -t healthcostpredictor .
+
+Run with:
+docker run -p 8501:8501 healthcostpredictor
